Final up to date

--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,11 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
   <meta charset="utf-8">
-  <title>Lab2App</title>
+  <title>Avon project</title>
   <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="viewport" content="width=device-width, initial-scale=0.01">
+  <link rel="icon" type="image/x-icon" href="avon_in_shopping_cart_T02_icon.ico">
 </head>
 <body>
   <app-root></app-root>
